--- a/dsgrid_project/project.toml
+++ b/dsgrid_project/project.toml
@@ -26,6 +26,14 @@ dataset_id = "dsgrid_efs_2012_distributed_generation"
 dataset_type = "historical"
 version = "1.0.0"
 
+[datasets.required_dimensions.single_dimensional.metric]
+base = [ "electricity_chp", "electricity_thermal_dg"]
+[datasets.required_dimensions.single_dimensional.model_year]
+base = [ 2012]
+[datasets.required_dimensions.single_dimensional.sector]
+base = [ "com", "res", "ind"]
+[datasets.required_dimensions.single_dimensional.subsector]
+base = [ "unspecified",]
 # ------- benchmark  ------- 
 
 # ------- modeled -------
@@ -119,6 +127,15 @@ record_ids = [ "commercial_end_uses",]
 dataset_id = "dsgrid_efs_2012_losses"
 dataset_type = "modeled"
 version = "1.0.0"
+
+[datasets.required_dimensions.single_dimensional.metric]
+base = [ "electricity_unspecified"]
+[datasets.required_dimensions.single_dimensional.model_year]
+base = [ 2012]
+[datasets.required_dimensions.single_dimensional.sector]
+base = [ "unspecified"]
+[datasets.required_dimensions.single_dimensional.subsector]
+base = [ "unspecified",]
 
 [dimensions]
 
