Remove time zone from TEMPO

--- a/dsgrid_project/datasets/modeled/tempo/dataset.toml
+++ b/dsgrid_project/datasets/modeled/tempo/dataset.toml
@@ -20,6 +20,7 @@ data_classification = "low"
 tags = [ "transportation", "conus-2022", "reference", "tempo"]
 data_schema_type = "standard"
 trivial_dimensions = [ "sector", "weather_year", "data_source"]
+use_project_geography_time_zone = true
 
 [data_schema]
 load_data_column_dimension = "metric"
