Only require model_year 2018 for comstock/resstock

--- a/dsgrid_project/project.json5
+++ b/dsgrid_project/project.json5
@@ -84,6 +84,9 @@
           sector: {
             base: ['res'],
           },
+          model_year: {
+            base: ['2018'],
+          },
           subsector: {
             supplemental: [
               {
@@ -137,6 +140,9 @@
       version: '1.0.0',
       required_dimensions: {
         single_dimensional: {
+          model_year: {
+            base: ['2018'],
+          },
           sector: {
             base: ['com'],
           },
