--- a/dsgrid_project/datasets/historical/dsgrid_efs_2012_distributed_generation/dataset.json5
+++ b/dsgrid_project/datasets/historical/dsgrid_efs_2012_distributed_generation/dataset.json5
@@ -3,7 +3,7 @@
 {
   dataset_id: "dsgrid_efs_2012_distributed_generation",
   dataset_type: "historical",
-  data_source: "dsgrid_efs_dg",
+  data_source: "dsgrid_efs",
   description: "Combined heat and power (CHP) and behind-the-meter distributed thermal generation estimates derived from DOE Combined Heat and Power (CHP) Installation Database, EIA Form 860, EIA Form 923, and EPA continuous emission monitoring systems (CEMS) data. Details in https://www.nrel.gov/docs/fy18osti/71492.pdf starting on page 56 and described in more detail in Appendix I",
   origin_creator: "Elaine Hale",
   origin_organization: "NREL",
@@ -71,13 +71,13 @@
     },
     {
       type: "data_source",
-      name: "dsgrid-efs-dg",
-      display_name: "dsgrid EFS DG",
+      name: "dsgrid-efs",
+      display_name: "dsgrid EFS",
       file: "dimensions/data_source.csv",
       module: "dsgrid.dimension.standard",
       "class": "DataSource",
-      description: "dsgrid distributed generation data for historical year 2012 created for the NREL Electrification Futures Study",
-    },
+      description: "dsgrid load data for historical year 2012 created for the NREL Electrification Futures Study",
+    }
     {
       type: "scenario",
       name: "Conus-2022-reference",
