--- a/dsgrid_project/datasets/historical/dsgrid_efs_2012_losses/dataset.json5
+++ b/dsgrid_project/datasets/historical/dsgrid_efs_2012_losses/dataset.json5
@@ -3,7 +3,7 @@
 {
   dataset_id: 'dsgrid_efs_2012_losses',
   dataset_type: 'historical',
-  data_source: 'dsgrid_efs_losses',
+  data_source: 'dsgrid_efs',
   sector_description: 'electricity',
   description: 'State-level estimates of distribution and transmission losses for historical year 2012 derived from FERC 714 (and similar) historical system-level timeseries profiles of 2012 load and 2012 losses reported on EIA Form 861. Details are in https://www.nrel.gov/docs/fy18osti/71492.pdf, starting on page 61.',
   origin_creator: 'Elaine Hale',
@@ -68,13 +68,13 @@
       description: 'Unspecified Electricity',
     },
     {
-      type: 'data_source',
-      name: 'dsgrid-efs-losses',
-      display_name: 'dsgrid EFS losses',
-      file: 'dimensions/data_source.csv',
-      module: 'dsgrid.dimension.standard',
-      class: 'DataSource',
-      description: 'dsgrid loss data for historical year 2012 created for the NREL Electrification Futures Study',
+      type: "data_source",
+      name: "dsgrid-efs",
+      display_name: "dsgrid EFS",
+      file: "dimensions/data_source.csv",
+      module: "dsgrid.dimension.standard",
+      "class": "DataSource",
+      description: "dsgrid load data for historical year 2012 created for the NREL Electrification Futures Study",
     },
     {
       type: 'scenario',
