--- a/dsgrid_project/datasets/historical/dsgrid_efs_historical_2012_conus_load_shapes/dataset.json5
+++ b/dsgrid_project/datasets/historical/dsgrid_efs_historical_2012_conus_load_shapes/dataset.json5
@@ -3,13 +3,17 @@
   dataset_id: "dsgrid_efs_historical_2012_conus_load_shapes",
   dataset_type: "historical",
   data_source: "dsgrid_efs",
-  description: "2012 historical hourly load shapes for CONUS developed as part of the Electric Futures Study (2018)", // @ehale: please review
-  origin_creator: "Elaine Hale",
+  description: "2012 historical hourly load shapes for CONUS developed as part of the Electrification Futures Study (2018). Per https://www.nrel.gov/docs/fy18osti/71492.pdf, original data sources were FERC (2016); SPP (2016); pjm (2016); MISO (2016); ISO New England (2016); NYISO (2016); ERCOT (2017). Disaggregation to transmission node per Brinkman et al. (2016) then aggregated to states.",
+  origin_creator: "Michael Rossol",
   origin_organization: "NREL",
   origin_contributors: [
+    "Michael Rossol",
+    "Joshua Novacheck",
+    "Donna Heimiller",
+    "Eduardo Ibanez",
     "Elaine Hale",
   ],
-  origin_project: "2018 Electric Futures Study",
+  origin_project: "2018 Electrification Futures Study",
   origin_date: "2018",
   origin_version: "0.2.0",
   source: "https://oedi-data-lake.s3.amazonaws.com/dsgrid-2018-efs/raw_complete/distributedpv_sectoral.dsg",
@@ -69,7 +73,7 @@
       file: "dimensions/metric.csv",
       module: "dsgrid.dimension.standard",
       "class": "EnergyEndUse",
-      description: "All end use electricity from the EFS study",
+      description: "Historical system-level electricity load",
     },
     {
       type: "data_source",
