--- a/dsgrid_project/datasets/historical/eia_861_annual_energy_use_state_sector/dataset.json5
+++ b/dsgrid_project/datasets/historical/eia_861_annual_energy_use_state_sector/dataset.json5
@@ -19,7 +19,7 @@
   source: 'Data extracted from EIA 861 utility customer sales',
   data_classification: 'low',
   tags: ['historical', 'eia861', 'sales'],
-  trivial_dimensions: ['subsector', 'scenario', 'data_source'],
+  trivial_dimensions: ['subsector', 'scenario'],
   data_schema: {
     load_data_column_dimension: 'metric',
   },
@@ -69,15 +69,6 @@
       module: 'dsgrid.dimension.standard',
       class: 'Scenario',
       description: 'Scenario CONUS (Continental U.S.) 2022 Reference',
-    },
-    {
-      type: 'data_source',
-      name: 'Data-Source-EIA861',
-      display_name: 'EIA 861',
-      file: 'dimensions/data_source_eia861.csv',
-      module: 'dsgrid.dimension.standard',
-      class: 'DataSource',
-      description: 'EIA 861',
     },
     {
       type: 'weather_year',
