Changing the metric dimension for historical load shapes to match that for losses

--- a/dsgrid_project/datasets/historical/dsgrid_efs_2012_losses/dataset.json5
+++ b/dsgrid_project/datasets/historical/dsgrid_efs_2012_losses/dataset.json5
@@ -23,7 +23,7 @@
     'data_source',
     'subsector',
   ],
-  // TODO: do we apply the same losses for every model year? for every scenario? @ehal says: We should apply the same loss rates for every model year and scenario. Basically we should have 2012 sales (EIA 861) + these losses = 2012 annual system load (FERC 714). For other years we would want to hold the ratios between sales and annual system load constant (compared to this data point).
+  // TODO: do we apply the same losses for every model year? for every scenario? @ehale says: We should apply the same loss rates for every model year and scenario. Basically we should have 2012 sales (EIA 861) + these losses = 2012 annual system load (FERC 714). For other years we would want to hold the ratios between sales and annual system load constant (compared to this data point).
 
   // TODO: not sure if project association for data_source__model_year is correct here for dsgrid_efs_2012_losses. Do we expect only 2012 model year? Answer depends on TODO above.
 
